--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
