--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "react": "^17.0.2",
+    "react-barcode": "^1.4.1",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.4",
     "react-toast-notification": "^1.1.4",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
