--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "react": "^17.0.2",
     "react-barcode": "^1.4.1",
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
